[tool.poetry]
name = "muza"
version = "0.1.0"
description = ""
authors = ["José Martínez <marquevjosman@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyAudio = "^0.2.14"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
